--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "where $T$ is the number of steps taken in the MDP (this is a random variable and may depend on $\\pi$), $R_t$ is the reward received at time $t$ (also a random variable which depends on $\\pi$), and $\\gamma$ is the **discount factor**. The value of $\\gamma$ is between 0 and 1, meaning it has the effect of \"discounting\" earlier rewards vs. more recent rewards. \n",
     "\n",
-    "More details about MDP are available [here](https://en.wikipedia.org/wiki/Markov_decision_process). Note what we said in the third bullet, that the new state only depends on the previous state and the action taken. The assumption is that we can simplify our effort by ignoring all the previous states except the last one and still achieve good results. This is known as the [Markov property](https://en.wikipedia.org/wiki/Markov_property)."
+    "The [Wikipedia page on MDP](https://en.wikipedia.org/wiki/Markov_decision_process) provides more details. Note what we said in the third bullet, that the new state only depends on the previous state and the action taken. The assumption is that we can simplify our effort by ignoring all the previous states except the last one and still achieve good results. This is known as the [Markov property](https://en.wikipedia.org/wiki/Markov_property). This assumption often works well and it greatly reduces the resources required."
    ]
   },
   {
@@ -143,11 +143,11 @@
     "id": "bAptEafKNlhm"
    },
    "source": [
-    "## Reinforcement Learning Examples\n",
+    "## Reinforcement Learning Example\n",
     "\n",
-    "Let's finish this introduction with two examples. One is a popular \"hello world\" (1) example for RL, balancing a pole vertically on a moving cart, called _CartPole_. The second example provides a \"taste\" of RLlib and a popular RL algorithm, _Proximal Policy Optimization_, again using _CartPole_.\n",
+    "Let's finish this introduction let's learn about the popular \"hello world\" (1) example environment for RL, balancing a pole vertically on a moving cart, called _CartPole_. Then we'll see how to use RLlib to train a policy using a popular RL algorithm, _Proximal Policy Optimization_, again using _CartPole_.\n",
     "\n",
-    "(1) In books and tutorials on particular programming languages, it is a tradition that the very first program shown prints the message \"Hello World!\"."
+    "(1) In books and tutorials on programming languages, it is a tradition that the very first program shown prints the message \"Hello World!\"."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "source": [
     "### CartPole and OpenAI\n",
     "\n",
-    "The [OpenAI \"gym\" environment](https://gym.openai.com/) provides MDP interfaces to a variety of simulators. For example, the _CartPole_ environment interfaces with a simple simulator that simulates the physics of balancing a pole on a cart. The CartPole problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website:\n",
+    "The popular [OpenAI \"gym\" environment](https://gym.openai.com/) provides MDP interfaces to a variety of simulated environments. Perhaps the most popular for learning RL is _CartPole_, a simple environment that simulates the physics of balancing a pole on a moving cart. The CartPole problem is described at https://gym.openai.com/envs/CartPole-v0. Here is an image from that website, where the pole is currently falling to the right, which means the cart will need to move to the right to restore balance:\n",
     "\n",
     "![Cart Pole](../images/rllib/Cart-Pole.png)"
    ]
@@ -175,14 +175,14 @@
     "id": "bAptEafKNlhm"
    },
    "source": [
-    "This example fits into the MDP framework as follows.\n",
+    "This example fits into the MDP framework as follows:\n",
     "- The **state** consists of the position and velocity of the cart (moving in one dimension from left to right) as well as the angle and angular velocity of the pole that is balancing on the cart.\n",
-    "- The **actions** are to decrease or increase the cart's velocity by one unit.\n",
-    "- The **transition function** is deterministic and is determined by simulating physical laws.\n",
+    "- The **actions** are to decrease or increase the cart's velocity by one unit. A negative velocity means it is moving to the left.\n",
+    "- The **transition function** is deterministic and is determined by simulating physical laws. Specifically, for a given **state**, what should we choose as the next velocity value? In the RL context, the correct velocity value to choose has to be learned. Hence, we learn a _policy_ that approximates the optimal transition function that could be calculated from the laws of physics.\n",
     "- The **reward function** is a constant 1 as long as the pole is upright, and 0 once the pole has fallen over. Therefore, maximizing the reward means balancing the pole for as long as possible.\n",
-    "- The **discount factor** in this case can be taken to be 1.\n",
+    "- The **discount factor** in this case can be taken to be 1, meaning we treat the rewards at all time steps equally and don't discount any of them.\n",
     "\n",
-    "More information about the `gym` Python module is available at https://gym.openai.com/. The list of all the available Gym environments is in [this wiki page](https://github.com/openai/gym/wiki/Table-of-environments). We'll even create our own in subsequent lessons."
+    "More information about the `gym` Python module is available at https://gym.openai.com/. The list of all the available Gym environments is in [this wiki page](https://github.com/openai/gym/wiki/Table-of-environments). We'll use a few more of them and even create our own in subsequent lessons."
    ]
   },
   {
@@ -312,7 +312,7 @@
     "id": "uBIoIuWYNlhw"
    },
    "source": [
-    "A **rollout** is a simulation of a policy (trained or \"hand-coded\") in an environment. It alternates between choosing actions using some policy and taking those actions in the environment.\n",
+    "A **rollout** is a simulation of a policy in an environment. It is used both during training and when running simulations with a trained policy. \n",
     "\n",
     "The code below performs a rollout in a given environment. It takes **random actions** until the simulation has finished and returns the cumulative reward."
    ]
@@ -871,7 +871,7 @@
    "source": [
     "# Using Checkpoints\n",
     "\n",
-    "Checkpoint the current trainer. The call to `agent.save()` returns the path to the checkpoint file, which can be used later to restore the current state to a new trainer."
+    "You checkpoint the current state of a trainer to save what it has learned. Checkpoints are used for subsequent _rollouts_ and also to continue training later from a known-good state.  Calling `agent.save()` creates the checkpoint and returns the path to the checkpoint file, which can be used later to restore the current state to a new trainer. Here we'll load the trained policy into the same process, but often it would be loaded in a new process, for example on a production cluster for serving that is separate from the training cluster."
    ]
   },
   {
@@ -895,9 +895,7 @@
     "id": "05icI8bfNliD"
    },
    "source": [
-    "Now let's use the trained policy to make predictions.\n",
-    "\n",
-    "> **Note:** Here we are loading the trained policy in the same process, but in practice, this would normally be done in a different process, for example on a production cluster separate from the training cluster."
+    "Now load the checkpoint in a new trainer:"
    ]
   },
   {
@@ -911,7 +909,6 @@
    "outputs": [],
    "source": [
     "trained_config = config.copy()\n",
-    "\n",
     "test_agent = PPOTrainer(trained_config, 'CartPole-v0')\n",
     "test_agent.restore(checkpoint_path)"
    ]
@@ -923,16 +920,8 @@
     "id": "c2gUUlqkNliG"
    },
    "source": [
-    "Now use the trained policy to act in an environment. The key line is the call to `test_agent.compute_action(state)` which uses the trained policy to choose an action."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "c2gUUlqkNliG"
-   },
-   "source": [
+    "Use the previously-trained policy to act in an environment. The key line is the call to `test_agent.compute_action(state)` which uses the trained policy to choose an action. This is an example of _rollout_, which we'll study in a subsequent lesson.\n",
+    "\n",
     "Verify that the cummulative reward received roughly matches up with the reward printed above. It will be at or near 200."
    ]
   },
