--- a/ray-rllib/explore-rllib/04-Online-Learning-with-DQN.ipynb
+++ b/ray-rllib/explore-rllib/04-Online-Learning-with-DQN.ipynb
@@ -54,7 +54,9 @@
     "3. Call `self.log_returns(episode_id, reward)`\n",
     "4. Call `self.end_episode(episode_id, obs)`\n",
     "\n",
-    "Note that `PolicyServer` is a very basic server, however `ExternalEnv` can work with any kind of Python server implementation."
+    "Note that `PolicyServer` is a very basic server, however `ExternalEnv` can work with any kind of Python server implementation.\n",
+    "\n",
+    "More details about the different ways RLlib can interface to external environments can be found in [this documentation](https://docs.ray.io/en/latest/rllib-env.html#external-application-clients)."
    ]
   },
   {
