--- a/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
+++ b/ray-rllib/multi-armed-bandits/00-Multi-Armed-Bandits-Overview.ipynb
@@ -25,7 +25,7 @@
     "|     | Lesson | Description |\n",
     "| :-- | :----- | :---------- |\n",
     "| 00  | [Multi-Armed-Bandits Overview](00-Multi-Armed-Bandits-Overview.ipynb) | Overview of this set of lessons. |\n",
-    "| 01  | [Introduction to Multi-Armed Bandits](01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armeed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
+    "| 01  | [Introduction to Multi-Armed Bandits](01-Introduction-to-Multi-Armed-Bandits.ipynb) | A quick introduction to the concepts of multi-armed bandits (MABs) and how they fit in the spectrum of RL problems. |\n",
     "| 02  | [Exploration vs. Exploitation Strategies](02-Exploration-vs-Exploitation-Strategies.ipynb) | A deeper look at algorithms that balance exploration vs. exploitation, the key challenge for efficient solutions. Much of this material is technical and can be skipped in a first reading, but skim the first part of this lesson at least. |\n",
     "| 03  | [Simple Multi-Armed Bandit](03-Simple-Multi-Armed-Bandit.ipynb) | A simple example of a multi-armed bandit to illustrate the core ideas. |\n",
     "| 04  | [Linear Upper Confidence Bound](04-Linear-Upper-Confidence-Bound.ipynb) | One popular algorithm for exploration vs. exploitation is _Upper Confidence Bound_. This lesson shows how to use a linear version in RLlib. |\n",
